# vocos-mlx

./: README.md  extract_filterbank.py  pyproject.toml  setup.py
assets/: mel_filters.npz
vocos_mlx/: __init__.py  audio.py  encodec.py  mel.py  model.py
