[build-system]
requires = [
    "huggingface_hub",
    "mlx>=0.17.3",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "vocos-mlx"
version = "0.0.1"
authors = [{name = "Lucas Newman", email = "lucasnewman@me.com"}]
license = {text = "MIT"}
description = "Vocos - MLX"
readme = "README.md"
keywords = [
    "artificial intelligence",
    "asr",
    "audio-generation,"
    "deep learning",
    "transformers",
    "text-to-speech"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = ['setuptools; python_version>="3.9"']

[project.urls]
Homepage = "https://github.com/lucasnewman/vocos-mlx"
